posting match after selecting 2 characterS

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <script src="../lib/angular/angular.js"></script>
         <script src="character.service.js"></script>
         <script src="currentCharacter.service.js"></script>
+        <script src="createMatch.service.js"></script>
+
         <script src="characterList/characterList.component.js"></script>
         <script src="app.js"></script>
         <script src="expando/expando.js"></script>
