--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <script src="currentCharacter.service.js"></script>
         <script src="createMatch.service.js"></script>
         <script src="createUser.service.js"></script>
+        <script src="userLogin.service.js"></script>
+
         <script src="characterList/characterList.component.js"></script>
         <script src="app.js"></script>
         <script src="expando/expando.js"></script>
