--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
         <script src="login/login.component.js"></script>
         <script src="newUser/newUser.component.js"></script>
+        <script src="match/match.component.js"></script>
 
 
 
