added more things

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <script src="createMatch.service.js"></script>
         <script src="createUser.service.js"></script>
         <script src="userLogin.service.js"></script>
+        <script src="matchIndex.service.js"></script>
+
 
         <script src="characterList/characterList.component.js"></script>
         <script src="app.js"></script>
@@ -27,6 +29,7 @@
         <script src="login/login.component.js"></script>
         <script src="newUser/newUser.component.js"></script>
         <script src="match/match.component.js"></script>
+
 
 
 
