--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <script src="login/login.component.js"></script>
         <script src="newUser/newUser.component.js"></script>
         <script src="match/match.component.js"></script>
+        <script src="matchDisplay/matchDisplay.component.js"></script>
 
 
 
