--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <script src="createUser.service.js"></script>
         <script src="userLogin.service.js"></script>
         <script src="matchIndex.service.js"></script>
+        <script src="matchNotes.service.js"></script>
 
 
         <script src="characterList/characterList.component.js"></script>
