--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <script src="newUser/newUser.component.js"></script>
         <script src="match/match.component.js"></script>
         <script src="matchDisplay/matchDisplay.component.js"></script>
+        <script src="newNote/newNote.component.js"></script>
 
 
 
