--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <script src="userLogin.service.js"></script>
         <script src="matchIndex.service.js"></script>
         <script src="matchNotes.service.js"></script>
+        <script src="newNote.service.js"></script>
 
 
         <script src="characterList/characterList.component.js"></script>
