--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <script src="matchNotes.service.js"></script>
         <script src="newNote.service.js"></script>
 
-
+        <script src="characterDropDown/characterDropDown.component.js"></script>
         <script src="characterList/characterList.component.js"></script>
         <script src="app.js"></script>
         <script src="expando/expando.js"></script>
